# crd-yaml-to-markdown

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: lib.rs  main.rs
tests/: tests.rs
